-hide quit issue for html5 version

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,8 +7,10 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="C:/Users/JPanc/developer/exported_game/24h_Capsule.exe"
+export_path="D:/Developer/GitHub/24h_Capsule/bin/Space_Capsule_v0.1.3.exe"
 patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
 
 [preset.0.options]
 
@@ -28,3 +30,26 @@ application/product_name="24h Capsule"
 application/file_description=""
 application/copyright="Justus"
 application/trademarks=""
+
+[preset.1]
+
+name="HTML5"
+platform="HTML5"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="D:/Developer/GitHub/24h_Capsule/bin/index.html"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/custom_html_shell=""
+html/head_include=""
+custom_template/release=""
+custom_template/debug=""
